# PythonTuringMachine

./: .gitignore  Backtrack.py  Compiler.py  Exceptions.py  Input.txt  TerminalPainter.py  TuringMachine.py  requirements.txt  test_Compiler.py
Doc/: Backtrack.rst  TerminalPainter.rst  TuringMachine.rst  conf.py
Doc/_build/doctrees/: Backtrack.doctree  Compiler.doctree  Exceptions.doctree  TerminalPainter.doctree  TuringMachine.doctree  environment.pickle  index.doctree  modules.doctree
Doc/_build/html/: .buildinfo  Backtrack.html  Compiler.html  Exceptions.html  TerminalPainter.html  TuringMachine.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
Doc/_build/html/_sources/: index.rst.txt  modules.rst.txt
Tests/: compile_full_long_correct.txt  compile_full_multistate_correct.txt  compile_full_short_correct.txt  compile_full_short_incorrect.txt  test_Backtrack.py  test_Compiler.py
Tests/ExamplePrograms/: AddOne.txt  BinarySumm.txt  CopyConsecutiveOnes.txt  RepeatZeroOne.txt
package/numbers_gui/: Cargo.toml  pyproject.toml
package/numbers_gui/src/: lib.rs
