[package]
name = "numbers_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "numbers_gui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
gtk = { version = "0.5.4", package = "gtk4" }
lazy_static = "1.4.0"
regex = "1"
